# local-whisper

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  implementation.md  install.sh  pyproject.toml  setup.sh  writingrules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
.reviews/: history-menu-review.md
LocalWhisperUI/: Package.swift
LocalWhisperUI/Sources/AppleSpeechCore/: AppleSpeechCore.swift
LocalWhisperUI/Sources/LocalWhisperSpeech/: main.swift
LocalWhisperUI/Sources/LocalWhisperUI/: AboutView.swift  ActivityPanel.swift  AdvancedPanel.swift  AdvancedSettingsView+Audio.swift  AdvancedSettingsView+Grammar.swift  AdvancedSettingsView+IO.swift  AdvancedSettingsView+Transcription.swift  AdvancedSettingsView.swift  AppMain.swift  AppState.swift  Components.swift  Constants.swift  EngineSettingsSections.swift  GeneralSettingsView.swift  GrammarPanel.swift  IPCClient.swift  IPCMessages.swift  MenuBarView.swift  OnboardingView.swift  OutputPanel.swift  OverlayView.swift  OverlayWindowController.swift  RecordingPanel.swift  SettingsView.swift  SharedViews.swift  ShortcutRecorder.swift  ShortcutsPanel.swift  Theme.swift  TranscriptionPanel.swift  VocabularyPanel.swift  VoicePanel.swift  WindowSupport.swift
LocalWhisperUI/Tests/AppleSpeechCoreTests/: AppleSpeechCoreTests.swift
assets/archive/original-screenshots-2026-05-06/: README.md
doc/: cli.mdx  docs.json  index.mdx  quickstart.mdx  troubleshooting.mdx
doc/product/: engines.mdx  grammar.mdx  macos.mdx  mobile.mdx  overview.mdx  tts.mdx
doc/reference/: architecture.mdx  configuration.mdx  installation.mdx  releasing.mdx  security.mdx  testing.mdx
doc/scripts/: prepare-github-pages.mjs
docs/: configuration.md  installation.md  mobile.md
scripts/: build_app.sh  install_app.sh  release.sh
src/flutter/local_whisper/: .metadata  ANDROID_HANDOVER.md  README.md  TODO.md  pubspec.yaml
src/whisper_voice/: __init__.py  __main__.py  _install.py  app.py  app_audio_health.py  app_commands.py  app_ipc.py  app_pipeline.py  app_recording.py  app_recovery.py  app_switching.py  audio.py  audio_processor.py  backup.py  cli.py  cmd_server.py  config.py  dictation_commands.py  grammar.py  history_export.py  ipc_server.py  key_interceptor.py  long_session.py  overlay.py  recovery.py  replacements.py  selection.py  settings.py  shortcuts.py  stats.py  theme.py  transcriber.py  tts_processor.py  ui_bundle.py  utils.py  watchdog.py
src/whisper_voice/assets/: LocalWhisper.icns
src/whisper_voice/backends/: __init__.py  base.py  modes.py  prompts.py
src/whisper_voice/cli/: __init__.py  build.py  client.py  constants.py  doctor.py  doctor_report.py  editor.py  history.py  lifecycle.py  main.py  settings.py
src/whisper_voice/config/: __init__.py  loader.py  mutations.py  schema.py  toml_helpers.py
src/whisper_voice/engines/: __init__.py  base.py  (+8 more)
tests/: conftest.py  test_apple_intelligence_backend.py  test_apple_speech_engine.py  test_audio_memory.py  test_audio_processor.py  test_backend_text_utils.py  test_backup.py  test_cli_lifecycle.py  test_cli_setup.py  test_cmd_server.py  test_config.py  test_dictation_commands.py  test_engine_context_capabilities.py  test_engines.py  test_flow.py  test_history_export.py  test_hold_to_paste.py  test_ipc_protocol.py  test_ipc_vocab_dispatch.py  test_key_interceptor.py  test_long_session.py  test_model_download_state.py  test_modes.py  test_product_contracts.py  test_qwen3_asr_cleanup.py  test_qwen3_models.py  test_recovery.py  test_replace_import.py  test_replacement_mutations.py  test_replacements.py  test_service_singleton.py  test_shortcut_config.py  test_toml_helpers.py  test_tts_kokoro.py  test_ui_binary.py  test_update_mechanism.py  test_utils.py  test_watchdog.py
tests/fixtures/: README.md  expected_fixed.txt  expected_raw.txt
(+50 files in other folders)
