[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-whisper"
version = "1.4.0"
description = "Local voice transcription with grammar correction for macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Soroush Yousefpour" }
]
keywords = ["voice", "transcription", "whisper", "macos", "local", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.0",
    "numpy>=2.4.4",
    "requests>=2.25.0",
    "pynput>=1.8.1",
    "pyobjc-framework-Cocoa>=12.1",
    "pyobjc-framework-Quartz>=12.1",
    "qwen3-asr-mlx>=0.1.0",
    "kokoro-mlx>=0.1.0",
    "soundfile>=0.13.1",
    "misaki[en]>=0.9.4",
]

[project.optional-dependencies]
apple-intelligence = [
    "apple-fm-sdk>=0.1.1",
]

[project.scripts]
wh = "whisper_voice:main"

[project.urls]
Homepage = "https://github.com/gabrimatic/local-whisper"
Repository = "https://github.com/gabrimatic/local-whisper"
"Bug Tracker" = "https://github.com/gabrimatic/local-whisper/issues"
Changelog = "https://github.com/gabrimatic/local-whisper/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_voice"]
include = ["src/whisper_voice/assets/*.png"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/setup.sh",
    "/src/whisper_voice/assets/*.png",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring live services (transcription engine, grammar backend)",
]
